--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 		<ul>
 			<li>C</li>
 			<ol>
-				<li><a href="//MyWebsite/Data_Structures_using_C%20(Reema%20Thareja).pdf" target="main">Data Structures Using C (Reema Thareja)</a></li><br>
-				<li><a href="//MyWebsite/Test-Your-C-Skills-By-Yashwant-Kanetkar.pdf" target="main">Test Your C Skills</a></li><br>
+				<li><a href="Data_Structures_using_C%20(Reema%20Thareja).pdf" target="main">Data Structures Using C (Reema Thareja)</a></li><br>
+				<li><a href="Test-Your-C-Skills-By-Yashwant-Kanetkar.pdf" target="main">Test Your C Skills</a></li><br>
 			</ol>
 			<li>JAVA</li>
 			<ol>
-				<li><a href="/MyWebsite/JavaTheCompleteReference.pdf" target="main">Data Structures Using C (Reema Thareja)</a></li><br>
+				<li><a href="JavaTheCompleteReference.pdf" target="main">Data Structures Using C (Reema Thareja)</a></li><br>
 			</ol>
 			<li>Python</li>
 			<ol>
-				<li><a href="file://MyWebsite/pythonlearn.pdf" target="main">Python for Everybody</a></li><br>
-				<li><a href="file://MyWebsite/thinkCSpy.pdf" target="main">Think like Computer Scientist with Python</a></li><br>
+				<li><a href="pythonlearn.pdf" target="main">Python for Everybody</a></li><br>
+				<li><a href="/MyWebsite/thinkCSpy.pdf" target="main">Think like Computer Scientist with Python</a></li><br>
 			</ol>
 		</ul>
 </body>
