--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			</ol>
 			<li>Python</li>
 			<ol>
-				<li><a href="pythonlearn.pdf" target="main">Python for Everybody</a></li><br>
-				<li><a href="/MyWebsite/thinkCSpy.pdf" target="main">Think like Computer Scientist with Python</a></li><br>
+				<li><a href="PythonForEverybody.pdf" target="main">Python for Everybody</a></li><br>
+				<li><a href="thinkCSpy.pdf" target="main">Think like Computer Scientist with Python</a></li><br>
 			</ol>
 		</ul>
 </body>
