--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</ol>
 			<li>JAVA</li>
 			<ol>
-				<li><a href="JavaTheCompleteReference.pdf" target="main">Data Structures Using C (Reema Thareja)</a></li><br>
+				<li><a href="JavaTheCompleteReference.pdf" target="main">Java The Complete Reference</a></li><br>
 			</ol>
 			<li>Python</li>
 			<ol>
